force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/tc9_et__Rate_Calculator_Junction__c.object-meta.xml
<CustomObject>
    <description>A junction object between the Rate Calculators and various child objects to the Rate Calculator. Allows for a many to many relationship</description>
    <label>Rate Calculator Junction</label>
    <nameField>
        <displayFormat>RCJ-{0000000000}</displayFormat>
        <label>Rate Calculator Junction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Calculator Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>