force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Interpretation Rule that applies to the Rate Calculator Junction</description>
    <inlineHelpText>Defines the Interpretation Rule that applies to the Rate Calculator Junction</inlineHelpText>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Rate Calculator Junctions with Interpretation Rule</relationshipLabel>
    <relationshipName>Rate_Calculator_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>