force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Is_Allowance_MPR_Related__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Is_Allowance_MPR_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the junction created is related to MPR with allowance pay code/Project code</description>
    <inlineHelpText>Indicates if the junction created is related to MPR with allowance pay code/Project code</inlineHelpText>
    <label>Is Allowance MPR Related?</label>
    <type>Checkbox</type>
</CustomField>