force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Mark_Up_Margin_Rate_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Mark_Up_Margin_Rate_Record__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Mark Up / Margin Rate Record that applies to the Rate Calculator Junction</description>
    <inlineHelpText>Defines the Mark Up / Margin Rate Record that applies to the Rate Calculator Junction</inlineHelpText>
    <label>Mark Up / Margin Rate Record</label>
    <referenceTo>tc9_et__Mark_Up_Margin_Rate_Record__c</referenceTo>
    <relationshipLabel>Rate Calculator Junctions with Mark Up / Margin Rate Record</relationshipLabel>
    <relationshipName>Rate_Calculator_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>