force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__MPR_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__MPR_Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It will stamp the project code from MPR when creating employee specific rate calculator</description>
    <inlineHelpText>It will stamp the project code from MPR when creating employee specific rate calculator</inlineHelpText>
    <label>MPR Project Code</label>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Rate Calculator Junctions (MPR Project Code)</relationshipLabel>
    <relationshipName>Rate_Calculator_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>