force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Pay Code that applies to the Rate Calculator Junction</description>
    <inlineHelpText>Defines the Pay Code that applies to the Rate Calculator Junction</inlineHelpText>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Rate Calculator Junctions with Pay Code</relationshipLabel>
    <relationshipName>Rate_Calculator_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>