force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Pay_Code_Not_On_Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Code_Not_On_Interpretation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Code Not On Interpretation Rule</label>
    <type>Checkbox</type>
</CustomField>