force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Pay_Code_Project_Code_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Code_Project_Code_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay/Project Code Not Required</label>
    <type>Checkbox</type>
</CustomField>