force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Pay_Project_code_combo__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Project_code_combo__c</fullName>
    <formula>tc9_et__Rate_Calculator__r.Id +&apos;-&apos; + tc9_et__Pay_Code__r.Id + &apos;-&apos; +  tc9_et__Project_Code__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay-Project code combo</label>
    <type>Text</type>
</CustomField>