force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__PayRate_Loading__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__PayRate_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Pay Rate Loading that applies to the Rate Calculator Junction</description>
    <inlineHelpText>Defines the Pay Rate Loading that applies to the Rate Calculator Junction</inlineHelpText>
    <label>Pay Rate Loading</label>
    <referenceTo>tc9_et__PayRate_Loading__c</referenceTo>
    <relationshipLabel>Rate Calculator Junctions</relationshipLabel>
    <relationshipName>Rate_Calculator_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>