force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Project_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Project_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Code</label>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Project Codes</relationshipLabel>
    <relationshipName>Project_Code</relationshipName>
    <type>Lookup</type>
</CustomField>