force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/fields/tc9_et__Rate_Calculator__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Calculator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Rate Calculator that applies to the Rate Calculator Junction</description>
    <inlineHelpText>Defines the Rate Calculator that applies to the Rate Calculator Junction</inlineHelpText>
    <label>Rate Calculator</label>
    <referenceTo>tc9_et__Rate_Calculator__c</referenceTo>
    <relationshipLabel>Rate Calculator Junctions with Rate Calculator</relationshipLabel>
    <relationshipName>Rate_Calculator_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>