force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/recordTypes/tc9_et__Pay_Code_To_Mark_Up_Margin_Rate.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Pay_Code_To_Mark_Up_Margin_Rate</fullName>
    <active>true</active>
    <description>To be used for Pay Code to Mark Up / Margin Rate Record Junctions</description>
    <label>Pay Code To  Mark Up / Margin Rate</label>
</RecordType>