force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/recordTypes/tc9_et__Pay_Code_To_Pay_Rate_Loading.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Pay_Code_To_Pay_Rate_Loading</fullName>
    <active>true</active>
    <description>To be used for Pay Code To Pay Rate Loading Junctions</description>
    <label>Pay Code To Pay Rate Loading</label>
</RecordType>