force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/recordTypes/tc9_et__Pay_Code_To_Rate_Calculator_Rate.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Pay_Code_To_Rate_Calculator_Rate</fullName>
    <active>true</active>
    <description>To be used for Pay Code to Rate Calculator Rate Junctions</description>
    <label>Pay Code To Rate Calculator Rate</label>
</RecordType>