force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/recordTypes/tc9_et__Rate_Calculator_To_Interpretation_Rule.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Rate_Calculator_To_Interpretation_Rule</fullName>
    <active>true</active>
    <description>To be used for Rate Calculator to Interpretation Rule Junctions</description>
    <label>Rate Calculator To Interpretation Rule</label>
</RecordType>