force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/recordTypes/tc9_et__Rate_Calculator_To_Pay_Code.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Rate_Calculator_To_Pay_Code</fullName>
    <active>true</active>
    <description>To be used for Rate Calculator to Pay Code Junctions</description>
    <label>Rate Calculator To Pay Code</label>
</RecordType>