force-app/main/default/objects/tc9_et__Rate_Calculator_Junction__c/recordTypes/tc9_et__Rate_Calculator_To_Pay_Code_Project_Code.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Rate_Calculator_To_Pay_Code_Project_Code</fullName>
    <active>true</active>
    <label>Rate Calculator To Pay Code Project Code</label>
</RecordType>